tests/ui/fail/log_interpolated_unsatisfied_trait_default.stderr
error[E0277]: `Input` doesn't implement `std::fmt::Display`
  --> $DIR/log_interpolated_unsatisfied_trait_default.rs:10:26
   |
10 |     info!("Text \"and\" {a: Input} and more");
   |                          ^^^^^^^^ `Input` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `Input`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: required because of the requirements on the impl of `emit::emit_rt::capture::Capture<emit::emit_rt::capture::CaptureDisplay>` for `Input`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
